[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich-migration"
version = "0.1.0"
description = "Utility to migrate a photo library to Immich"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.0",
    "requests>=2.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
immich-migration = "immich_migration.cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"